beacon handle and client layout
- Listener now listen on multiple URIs
- To input multiple URI on client, enter each URI per line
- do know if have other bugs

--- a/listener_beacon_http/config.json
+++ b/listener_beacon_http/config.json
@@ -64,11 +64,11 @@
               },
               {
                 "type": "label",
-                "text": "URI:",
+                "text": "URIs:",
                 "position": [ 3, 0, 1, 1 ]
               },
               {
-                "type": "input",
+                "type": "textedit",
                 "id": "uris",
                 "placeholder": "/index.php",
                 "position": [ 3, 1, 1, 2 ]
